# windows-gui-automation-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: PACKAGING.md
src/windows_gui_automation_toolkit/: __init__.py  smart_agent.py  windows_gui_automation_toolkit.py
